--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -18,7 +18,8 @@
           <th width=50>Receipt</th>
           <th>Name</th>
           <th width=25>Balance</th>
-          <th width=85>Date</th>
+          <th width=85>Registered</th>
+          <th width=85>Last Login</th>
         </tr>
       </thead>
       <tbody>
