--- a/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
@@ -5,7 +5,7 @@
     <%= locale_frame :title => '' do |locale| %>
       <%= f.input "title_#{locale}", :label => 'Blog Title', :id => 'name_error', :required => true %>
     <% end %>
-    <%= f.input :slug, label: 'Slug', hint: 'Leave blank to have auto-generated based on title.<br>For non-Roman languages such as Japanese, you must specify the slug explicitly.'.html_safe %>
+    <%= f.input :slug, label: 'Slug', hint: 'Leave blank to have auto-generated based on title.' %>
     <%= f.input :published, :as => :toggle, :label => 'Publish It?' %>
     <%= f.input :is_public, :as => :toggle, :label => 'Make Blog Public?', :hint => 'This will allow anyone to see the blog.  Use option below to restrict to registered users' %>
     <%= f.input :requires_login, :as => :toggle, :label => 'Public Requires Login?', :hint => 'If this is a public blog, user must be logged in to see it.  (All private blogs automatically require login)' %>
