--- a/core/app/views/dm_core/admin/accounts/analytics.html.erb
+++ b/core/app/views/dm_core/admin/accounts/analytics.html.erb
@@ -33,6 +33,11 @@
       <%= f.input :preferred_stripe_public_key, :label => 'Public Key' %>
     <% end %>
 
+    <%= well_frame title: 'Subscription Processor' do %>
+      <%= f.input :preferred_subscription_processor, label: 'Use', collection: ['paymill', 'stripe'], include_blank: true,
+                 hint: 'Used only for subscriber content. DO NOT set or change this unless you know what you are doing' %>
+    <% end %>
+
     <%= submit_or_cancel :cancel_url => dm_core.admin_account_analytics_path %>
 
 	<% end %>
