don't use page_title from dm_cms

--- a/app/views/layouts/admin/_page_header.html.erb
+++ b/app/views/layouts/admin/_page_header.html.erb
@@ -2,7 +2,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-  <title><%= page_title %></title>
+  <title><%= content_for :page_title %></title>
   <%= csrf_meta_tag %>
 
   <link href="<%= admin_theme_path %>css/main.css" rel="stylesheet" type="text/css" />
