--- a/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
@@ -19,9 +19,9 @@
     </div>
 
     <%= locale_frame :title => '' do |locale| %>
-      <%= f.input "title_#{locale}", :label => 'Post Title', :id => 'title_error', :required => true %>
-      <%= f.input "summary_#{locale}", :label => 'Summary', :wrapper => :vertical, :as => :editor, input_html: {style: "height: 100px;"} %>
-      <%= f.input "content_#{locale}", :label => 'Content', :wrapper => :vertical, :as => :editor, input_html: {style: "height: 500px;"} %>
+      <%= f.input "title_#{locale}",   :label => 'Post Title', :required => true %>
+      <%= f.input "summary_#{locale}", :label => 'Summary',    :required => true, :wrapper => :vertical, :as => :editor, input_html: {style: "height: 100px;"} %>
+      <%= f.input "content_#{locale}", :label => 'Content',    :required => true, :wrapper => :vertical, :as => :editor, input_html: {style: "height: 500px;"} %>
     <% end %>
 
     <%= f.input :slug, label: 'Slug', hint: 'Leave blank to have auto-generated based on title.' %>
