--- a/event/app/views/dm_event/admin/workshop_prices/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshop_prices/_form.html.erb
@@ -13,9 +13,9 @@
   <%= content_box :title => @title do %>
 
     <%= locale_frame :title => '' do |locale| %>
-      <%= f.input "price_description_#{locale}", :label => 'Title', :id => 'title_error', :required => true %>
-      <%= f.input "sub_description_#{locale}", :label => 'Sub-title', :id => 'title_error', :required => true %>
-      <%= f.input "payment_details_#{locale}", :label => 'Payment Details', :hint => 'Markdown format', :wrapper => :vertical, :as => :editor, input_html: {style: "height: 200px;"},
+      <%= f.input "price_description_#{locale}", :label => 'Title', :required => true %>
+      <%= f.input "sub_description_#{locale}",   :label => 'Sub-title' %>
+      <%= f.input "payment_details_#{locale}",   :label => 'Payment Details', :hint => 'Markdown format', :wrapper => :vertical, :as => :editor, input_html: {style: "height: 200px;"},
                  :hint => 'Any special details/instructions for this price (Markdown)' %>
     <% end %>
     
