--- a/event/app/views/dm_event/payments/_registrations_sofort.html.erb
+++ b/event/app/views/dm_event/payments/_registrations_sofort.html.erb
@@ -2,8 +2,8 @@
         credential2:  current_account.preferred_sofort_project_id,
         credential3:  current_account.preferred_sofort_project_password,
         credential4:  '',  #--- notification password
-        amount:       @registration.balance_owed,
-        currency:     @registration.balance_owed.currency.iso_code,
+        amount:       @registration.payment_owed,
+        currency:     @registration.payment_owed.currency.iso_code,
         service: :directebanking do |service|
           service.item_name         @registration.workshop.title
           service.description       @registration.workshop.title
