--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
@@ -6,7 +6,7 @@
 
 <p><%= I18n.t('ems.ticket_outstanding_balance') %>:</p>
 
-<p><strong><%= @balance_owed %></strong></p>
+<p><strong><%= @payment_owed %></strong></p>
 
 <p><%= I18n.t('ems.ticket_payment_link_leadin' )%>::</p>
 
