--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.text.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.text.erb
@@ -10,7 +10,7 @@
 
 <%= I18n.t('ems.ticket_outstanding_balance') %>:
 
-<%= @balance_owed %>
+<%= @payment_owed %>
 
 <%= I18n.t('ems.ticket_payment_link_leadin' )%>:
 
