--- a/cms/app/views/dm_cms/shared/_social_buttons.html.erb
+++ b/cms/app/views/dm_cms/shared/_social_buttons.html.erb
@@ -1,5 +1,5 @@
 <%#--- dynamcially loaded buttons %>
-<div class="page_social_buttons">
+<div class="page_social_buttons clearfix">
   <div class="fb-like" data-href="<%= request.original_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
   <%= link_to('Tweet', '//twitter.com/intent/tweet', class: "twitter-share-button",
         data: { url: request.original_url, 
