--- a/core/app/views/dm_core/profile/_profile_sidebar.html.erb
+++ b/core/app/views/dm_core/profile/_profile_sidebar.html.erb
@@ -1,4 +1,6 @@
-<ul id="profile_menu_list">
-  <li><%= link_to I18n.t('core.profile_account_settings'), dm_core.edit_profile_account_path %></li>
-  <li><%= link_to I18n.t('core.profile_details_settings'), dm_core.edit_profile_details_path %></li>
-</ul>
+<nav>
+  <ul id="profile_menu_list">
+    <li><%= link_to I18n.t('core.profile_account_settings'), dm_core.edit_profile_account_path %></li>
+    <li><%= link_to I18n.t('core.profile_details_settings'), dm_core.edit_profile_details_path %></li>
+  </ul>
+</nav>
