--- a/core/app/views/dm_core/admin/accounts/analytics.html.erb
+++ b/core/app/views/dm_core/admin/accounts/analytics.html.erb
@@ -36,6 +36,8 @@
     <%= well_frame title: 'Subscription Processor' do %>
       <%= f.input :preferred_subscription_processor, label: 'Use', collection: ['paymill', 'stripe'], include_blank: true,
                  hint: 'Used only for subscriber content. DO NOT set or change this unless you know what you are doing' %>
+      <%= f.input :preferred_default_currency, label: 'Default Currency', collection: Account::CURRENCY_TYPES,
+                  hint: 'Default currency used for this site' %>
     <% end %>
 
     <%= submit_or_cancel :cancel_url => dm_core.admin_account_analytics_path %>
