--- a/forum/app/views/dm_forum/forums/list.html.erb
+++ b/forum/app/views/dm_forum/forums/list.html.erb
@@ -7,4 +7,4 @@
     </li>
   <% end %>
 </ul>
-<div class="no_items"><%= I18n.t "fms.no_monitored_topics" %></div>
+<div class="no_items"><%= I18n.t "fms.no_followed_topics" %></div>
