--- a/cms/app/views/dm_cms/shared/_comment_form.html.erb
+++ b/cms/app/views/dm_cms/shared/_comment_form.html.erb
@@ -4,7 +4,7 @@
       <%= simple_form_for :comment, url: [commenting_on, :ajax_add_comment] do |f| %>
         <%= f.input :body, :as => :text, :label => I18n.t('cms.comment_body'), 
                         :input_html => {:rows => 10} %>
-        <%= f.submit I18n.t('cms.comment_submit') %>
+        <%= f.submit I18n.t('cms.comment_submit'), class: 'btn btn-primary' %>
       <% end %>
     <% else %>
       <p><%= I18n.t 'cms.comment_login_required' %></p>
