--- a/cms/app/views/dm_cms/pages/_snippet_fragment.html.erb
+++ b/cms/app/views/dm_cms/pages/_snippet_fragment.html.erb
@@ -4,7 +4,7 @@
 <%= render_content_item(snippet_fragment) %>
 </div>
 <% elsif snippet_fragment.enable_cache %>
-  <% cache("snippet/#{DmCore::Language.locale}/fragment/#{snippet_fragment.container}_#{snippet_fragment.id}" ) do %>
+  <% cache("snippet/#{DmCore::Language.locale}/fragment/#{snippet_fragment.slug}_#{snippet_fragment.id}" ) do %>
 <%= render_content_item(snippet_fragment) %>
   <% end %>
 <% else %>
